tests/lime/fail/tokens/label_rest/byte_91.wsa
jmp .l[ .l[: push 91
